[gd_scene load_steps=3 format=3 uid="uid://bb8yqmhj5m6c2"]

[ext_resource type="Script" uid="uid://cj5ruu8svaeuo" path="res://Assets/money/draggable_money.gd" id="2_usa25"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l3xsk"]
size = Vector2(30, 66.3333)

[node name="Bill" type="Node2D" groups=["bills"]]
script = ExtResource("2_usa25")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
region_rect = Rect2(50, 50, 50, 50)

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(3, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_l3xsk")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
